# MeshGeometricDeviation

./: .gitignore  ALGORITHM.md  CMakeLists.txt  README.md  build.cmd  test.cmd
.github/workflows/: ci.yml
cmake/: Config.cmake.in
examples/: CMakeLists.txt  mesh_compare.cpp
include/MeshGeometricDeviation/: MeshComparison.h  SpatialDb.h
src/: MeshComparison.cpp  MeshComparison.h  SpatialDb.cpp  SpatialDb.h  mesh_compare.cpp
